[gd_scene load_steps=3 format=3 uid="uid://brnw1fenrliu0"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_v78pu"]
[ext_resource type="Texture2D" uid="uid://dpmptmiejgnx8" path="res://art/Blob.png" id="2_aq2xh"]

[node name="menu" type="Node2D"]
script = ExtResource("1_v78pu")

[node name="MenuVisuals" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayButton" type="Button" parent="MenuVisuals"]
layout_mode = 0
offset_left = 504.0
offset_top = 296.0
offset_right = 648.0
offset_bottom = 352.0
theme_override_font_sizes/font_size = 32
text = "Play"

[node name="QuitButton" type="Button" parent="MenuVisuals"]
layout_mode = 0
offset_left = 504.0
offset_top = 366.0
offset_right = 648.0
offset_bottom = 422.0
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="Title" type="Label" parent="MenuVisuals"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 411.0
offset_top = 96.0
offset_right = 701.0
offset_bottom = 184.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "Evolution"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Blob" type="Sprite2D" parent="MenuVisuals"]
position = Vector2(81, 307)
scale = Vector2(2, 2)
texture = ExtResource("2_aq2xh")

[node name="Blob2" type="Sprite2D" parent="MenuVisuals"]
position = Vector2(1012, 374)
scale = Vector2(2, 2)
texture = ExtResource("2_aq2xh")

[node name="Blob3" type="Sprite2D" parent="MenuVisuals"]
position = Vector2(185, 558)
scale = Vector2(2, 2)
texture = ExtResource("2_aq2xh")

[node name="Blob4" type="Sprite2D" parent="MenuVisuals"]
position = Vector2(678, 585)
scale = Vector2(2, 2)
texture = ExtResource("2_aq2xh")

[node name="Blob5" type="Sprite2D" parent="MenuVisuals"]
position = Vector2(297, 175)
scale = Vector2(2, 2)
texture = ExtResource("2_aq2xh")

[node name="Blob6" type="Sprite2D" parent="MenuVisuals"]
position = Vector2(945, 78)
scale = Vector2(2, 2)
texture = ExtResource("2_aq2xh")

[node name="Controls" type="Label" parent="MenuVisuals"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 389.5
offset_top = 430.0
offset_right = 723.5
offset_bottom = 505.0
grow_horizontal = 2
grow_vertical = 2
text = "Hover Over Blob = See Stats
Click Blob = Focus Camera + See More Stats
P = Pause"
horizontal_alignment = 1

[connection signal="pressed" from="MenuVisuals/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MenuVisuals/QuitButton" to="." method="_on_quit_button_pressed"]
